apps/internal-router/overlays/aws-local-runtime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-local-runtime-internal-router-ingress
  namespace: aws-local-runtime
spec:
  ingressClassName: nginx
  rules:
  - host: a104bc882491046a1ad11a7601d800ad-1055848983.us-east-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /webhooks
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /workflows
        pathType: Prefix
      - backend:
          service:
            name: internal-router
            port:
              number: 80
        path: /app-proxy
        pathType: Prefix
